Choose factions randomly.
And other miscellaneous changes.

--- a/src/app/pages/new-game/new-game.page.html
+++ b/src/app/pages/new-game/new-game.page.html
@@ -10,92 +10,76 @@
     <ion-item>
       <ion-label translate>profile</ion-label>
       <ion-select [ngModel]="profile" (ngModelChange)="onProfileChange($event)" [compareWith]="sameProfile">
-        <ion-select-option *ngFor="let p of allProfiles" [value]="p">
-          {{p.predefined ? ('profile-name.' + p.name | translate) : p.name}}
+        <ion-select-option *ngFor="let prof of allProfiles" [value]="prof">
+          {{prof.predefined ? ('predefined-profile.' + prof | translate) : prof}}
         </ion-select-option>
       </ion-select>
     </ion-item>
-    <ion-radio-group [ngModel]="profile.numPlayers.toString()" (ngModelChange)="onNumPlayersChange($event)">
+
+    <ion-radio-group [ngModel]="profile.numPlayers" (ngModelChange)="onNumPlayersChange($event)">
       <ion-item>
         <ion-label translate>number-of-players</ion-label>
       </ion-item>
       <ion-row>
-        <ion-col>
+        <ion-col *ngFor="let num of [2, 3, 4, 5]">
           <ion-item>
-            <ion-label>2</ion-label>
-            <ion-radio slot="start" value="2"></ion-radio>
-          </ion-item>
-        </ion-col>
-        <ion-col>
-          <ion-item>
-            <ion-label>3</ion-label>
-            <ion-radio slot="start" value="3"></ion-radio>
-          </ion-item>
-        </ion-col>
-        <ion-col>
-          <ion-item>
-            <ion-label>4</ion-label>
-            <ion-radio slot="start" value="4"></ion-radio>
-          </ion-item>
-        </ion-col>
-        <ion-col>
-          <ion-item>
-            <ion-label>5</ion-label>
-            <ion-radio slot="start" value="5"></ion-radio>
+            <ion-label>{{num}}</ion-label>
+            <ion-radio slot="start" [value]="num"></ion-radio>
           </ion-item>
         </ion-col>
       </ion-row>
     </ion-radio-group>
+
     <ion-item>
       <ion-label translate>factions</ion-label>
       <ion-select multiple="true" [ngModel]="profile.factions" (ngModelChange)="onFactionsChange($event)"
-        selectedText="{{'factions-selected' | translate:({ num: profile.factions.length })}}">
+        [selectedText]="'factions-selected' | translate:({ num: profile.factions.length })">
         <ion-select-option *ngFor="let faction of allFactions" [value]="faction" translate>{{faction}}
         </ion-select-option>
       </ion-select>
     </ion-item>
+
     <ion-item>
       <ion-label position="floating" translate>number-of-factions</ion-label>
-      <ion-range [(ngModel)]="profile.numFactions" pin="true" snaps="true" ticks="true" min="{{profile.numPlayers}}"
-        max="{{profile.factions.length <= profile.numPlayers ? profile.numPlayers + 1 : profile.factions.length}}"
-        disabled="{{profile.factions.length <= profile.numPlayers}}">
+      <ion-range [(ngModel)]="profile.numFactions" pin="true" snaps="true" ticks="true" [min]="profile.numPlayers"
+        [max]="maxNumFactions <= profile.numPlayers ? profile.numPlayers + 1 : maxNumFactions"
+        [disabled]="maxNumFactions <= profile.numPlayers">
       </ion-range>
       <ion-note translate [translateParams]="{ num: profile.numFactions }">number-of-factions-note</ion-note>
     </ion-item>
+
+    <ion-item>
+      <ion-label translate>extra-final-scoring-tile</ion-label>
+      <ion-checkbox [(ngModel)]="profile.exraFinalScoringTile"></ion-checkbox>
+    </ion-item>
+
     <ion-button (click)="onClickGenerate()" translate>generate</ion-button>
   </ion-list>
+
   <ion-list>
     <ion-item-divider>
       <ion-label translate>factions</ion-label>
     </ion-item-divider>
+
     <ion-row>
-      <ion-col>
+      <ion-col *ngFor="let faction of pickedFactions">
         <ion-item>
           <ion-icon name="body-outline"></ion-icon>
-          <ion-label translate>acolytes</ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col>
-        <ion-item>
-          <ion-icon name="body-outline"></ion-icon>
-          <ion-label translate>alchemists</ion-label>
-        </ion-item>
-      </ion-col>
-      <ion-col>
-        <ion-item>
-          <ion-icon name="body-outline"></ion-icon>
-          <ion-label translate>auren</ion-label>
+          <ion-label translate>{{faction}}</ion-label>
         </ion-item>
       </ion-col>
     </ion-row>
+
     <ion-item-divider>
       <ion-label translate>bonus-cards</ion-label>
     </ion-item-divider>
+
     <ion-item-divider>
       <ion-label translate>scoring-tiles</ion-label>
     </ion-item-divider>
+
     <ion-item-divider>
-      <ion-label translate>final-scoring-tile</ion-label>
+      <ion-label translate>final-scoring-tiles</ion-label>
     </ion-item-divider>
   </ion-list>
 
