Style change and refactor

--- a/src/app/pages/new-game/new-game.page.html
+++ b/src/app/pages/new-game/new-game.page.html
@@ -17,21 +17,26 @@
     </ion-item>
 
     <ion-radio-group [ngModel]="profile.numPlayers" (ngModelChange)="onNumPlayersChange($event)">
-      <ion-item>
+      <ion-item lines="none" class="item-label-stacked">
         <ion-label translate>number-of-players</ion-label>
+        <ion-row>
+          <ion-col *ngFor="let num of [2, 3, 4, 5]">
+            <ion-item>
+              <ion-label>{{num}}</ion-label>
+              <ion-radio slot="start" [value]="num"></ion-radio>
+            </ion-item>
+          </ion-col>
+        </ion-row>
       </ion-item>
-      <ion-row>
-        <ion-col *ngFor="let num of [2, 3, 4, 5]">
-          <ion-item>
-            <ion-label>{{num}}</ion-label>
-            <ion-radio slot="start" [value]="num"></ion-radio>
-          </ion-item>
-        </ion-col>
-      </ion-row>
     </ion-radio-group>
 
     <ion-item>
-      <ion-label translate>factions</ion-label>
+      <ion-label>
+        <ion-text translate>factions</ion-text>
+        <p>
+          <ion-note class="ion-text-wrap" translate>factions-note</ion-note>
+        </p>
+      </ion-label>
       <ion-select multiple="true" [ngModel]="profile.factions" (ngModelChange)="onFactionsChange($event)"
         [selectedText]="'factions-selected' | translate:({ num: profile.factions.length })">
         <ion-select-option *ngFor="let faction of allFactions" [value]="faction" translate>{{faction}}
@@ -39,48 +44,61 @@
       </ion-select>
     </ion-item>
 
-    <ion-item>
-      <ion-label position="floating" translate>number-of-factions</ion-label>
+    <ion-item class="item-label-stacked">
+      <ion-label>
+        <ion-text translate>number-of-factions</ion-text>
+        <p>
+          <ion-note class="ion-text-wrap" translate [translateParams]="{ num: profile.numFactions }">number-of-factions-note
+          </ion-note>
+        </p>
+      </ion-label>
       <ion-range [(ngModel)]="profile.numFactions" pin="true" snaps="true" ticks="true" [min]="profile.numPlayers"
         [max]="maxNumFactions <= profile.numPlayers ? profile.numPlayers + 1 : maxNumFactions"
         [disabled]="maxNumFactions <= profile.numPlayers">
       </ion-range>
-      <ion-note translate [translateParams]="{ num: profile.numFactions }">number-of-factions-note</ion-note>
     </ion-item>
 
     <ion-item>
       <ion-label translate>extra-final-scoring-tile</ion-label>
-      <ion-checkbox [(ngModel)]="profile.exraFinalScoringTile"></ion-checkbox>
+      <ion-checkbox [(ngModel)]="profile.extraFinalScoringTile"></ion-checkbox>
     </ion-item>
 
     <ion-button (click)="onClickGenerate()" translate>generate</ion-button>
   </ion-list>
 
   <ion-list>
-    <ion-item-divider>
-      <ion-label translate>factions</ion-label>
-    </ion-item-divider>
+    <ion-item-group>
+      <ion-item-divider>
+        <ion-label translate>factions</ion-label>
+      </ion-item-divider>
 
-    <ion-row>
-      <ion-col *ngFor="let faction of pickedFactions">
-        <ion-item>
-          <ion-icon name="body-outline"></ion-icon>
-          <ion-label translate>{{faction}}</ion-label>
-        </ion-item>
-      </ion-col>
-    </ion-row>
+      <ion-row>
+        <ion-col *ngFor="let faction of pickedFactions">
+          <ion-item>
+            <ion-icon name="body-outline"></ion-icon>
+            <ion-label translate>{{faction}}</ion-label>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-item-group>
 
-    <ion-item-divider>
-      <ion-label translate>bonus-cards</ion-label>
-    </ion-item-divider>
+    <ion-item-group>
+      <ion-item-divider>
+        <ion-label translate>bonus-cards</ion-label>
+      </ion-item-divider>
+    </ion-item-group>
 
-    <ion-item-divider>
-      <ion-label translate>scoring-tiles</ion-label>
-    </ion-item-divider>
+    <ion-item-group>
+      <ion-item-divider>
+        <ion-label translate>scoring-tiles</ion-label>
+      </ion-item-divider>
+    </ion-item-group>
 
-    <ion-item-divider>
-      <ion-label translate>final-scoring-tiles</ion-label>
-    </ion-item-divider>
-  </ion-list>
+    <ion-item-group>
+      <ion-item-divider>
+        <ion-label translate>final-scoring-tiles</ion-label>
+      </ion-item-divider>
+    </ion-item-group>
+</ion-list>
 
 </ion-content>
