--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -1,9 +1,19 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title translate>settings</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-Some settings
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large" translate>settings</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  Some settings
+
 </ion-content>
